update documentation and routes
